# theia-cpp-extensions

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  NOTICE.md  README.md  appveyor.yml  gitpod.yml  lerna.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general---other.md
.github/workflows/: ci-cd.yml
browser-app/: compile.tsconfig.json  package.json  wdio.base.conf.js  wdio.conf.js
browser-app/test/bottom-panel/: bottom-panel.ts
browser-app/test/left-panel/: left-panel.ts
browser-app/test/right-panel/: right-panel.ts
configs/: base.tsconfig.json  errors.eslintrc.json  errors.tslint.json  mocharc.json  root-compilation.tsconfig.json  typedoc.json
dev-packages/eslint-plugin/: package.json
electron-app/: package.json
examples/browser/: package.json
examples/clangd-contexts-cli/: .eslintrc.js  README.md  compile.tsconfig.json  overrides.eslintrc.json  package.json
examples/clangd-contexts-ext/: .vscodeignore  README.md  package.json
examples/clangd-workspace/: .clangd-contexts  .gitignore  README.md  build.sh
examples/clangd-workspace/app/: CMakeLists.txt  file_1.c  file_2.c  file_3.c  files.h  main.c
examples/clangd-workspace/lib/: CMakeLists.txt  lib.c  lib.h
examples/cpp-debug-workspace/: README.md  a.cpp
examples/cpp-multi-root-workspace/: README.md  example.theia-workspace
examples/electron/: compile.tsconfig.json  package.json
scripts/: skip-prepare.js  theia-version.js  theia-version.sh
(+26 files in other folders)
